Indexing for Pawns

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="allinit.c" />
     <ClCompile Include="vice.c" />
   </ItemGroup>
   <ItemGroup>
