--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -128,6 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="allinit.c" />
+    <ClCompile Include="bitboards.c" />
+    <ClCompile Include="board.c" />
+    <ClCompile Include="hashkeys.c" />
     <ClCompile Include="vice.c" />
   </ItemGroup>
   <ItemGroup>
