--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClCompile Include="allinit.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bitboards.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hashkeys.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="board.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
